[package]
name = "rustcraft_example"
version = "1.0.1"
edition = "2021"
description = "Example mod for RustCraft"
license = "MIT"

[lib]
name = "rustcraft_example"
crate-type = ["cdylib"]

[dependencies]
rustcraft-api = { path = "../rust-sdk/rustcraft-api" }
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
