[workspace]
resolver = "2"
members = [
    "rustcraft-core",
    "rustcraft-api",
]

[workspace.package]
version = "1.0.1"
edition = "2021"
description = "Rust SDK for developing Minecraft mods with RustCraft"
license = "MIT"
repository = "https://github.com/vavassxx/rustcraft"

[workspace.dependencies]
jni = "0.21"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.9"
